<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hang</string>
    <string name="menu_settings">Settings</string>
    <string name="register_phone_number_instructions">To register, enter your 
        phone number.  We\'ll securely upload it to the hang(TM) servers, so 
        that people who you\'re mutually phone contacts for can become posted 
        on your statuses.</string>
    <string name="register_confirmation_instructions">We sent you an SMS 
        confirming that this is really your phone number.  Please enter the 
        confirmation code from the SMS.</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="verify">Verify</string>
    <string name="register_details_instruction">Now that your phone number has 
        been confirmed, go ahead and fill out any additional details 
        about yourself.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="icon">Icon (Optional)</string>
    <string name="finished">Finished</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="create_new_proposal">No Proposal.</string>
    <string name="title_activity_set_status">SetStatusActivity</string>
    <string name="title_activity_create_proposal">CreateProposalActivity</string>
    <string name="now">Now</string>
    <string name="later">Later</string>
    <string name="broadcast_new_proposal">Broadcast New Proposal</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="where">Where? (optional)</string>
    <string name="how_soon_now">Now</string>
    <string name="how_soon_in_15">In 15</string>
    <string name="how_soon_in_30">In 30</string>
    <string name="how_soon_1_hr">1 Hr</string>
    <string name="when">When?</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="at">at:</string>
    <string name="proposal">Proposal: </string>
    <string name="set_status">Set Status</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="manage_broadcasts">Manage Broadcasts</string>
    <string name="add_outgoing_broadcast">Add Outgoing Broadcast</string>
    <string name="new_broadcast_phone_number">New Broadcast Phone Number</string>
    <string name="loading"></string>
    <string name="update_your_status">No status.</string>
    <string name="nudge_this_user">Click to nudge me</string>
    <string name="char_limit"> (%d char limit)</string>

    <!--
    These are strings that will be placed IN the 
    title bar to show the user where they are at.
    -->
    <string name="home">Home</string>
    <string name="sample_user_name">Default user</string>
    <string name="sample_user_status">Default user status</string>
    <string name="sample_user_proposal">Default proposal text</string>
    <string name="free">Free</string>
    <string name="busy">Busy</string>
    <string name="how_long_will_you_be_free">How long will you be free?</string>
    <string name="when_will_you_be_free">When will you be free?</string>
    <string name="start_broadcasting">Start Broadcasting</string>
    <string name="stop_broadcasting">Stop Broadcasting</string>
    <string name="proposal_description">Proposal Description</string>
    <string name="proposal_location">Proposal Location</string>
    <string name="filter_broadcast">Filter</string>
    <string name="unfilter_broadcast">Unfilter</string>
    <string name="today_at">Today at</string>
    <string name="tomorrow_at">Tomorrow at</string>
    <string name="delete_proposal">Delete My Proposal</string>
    <string name="no_incoming_broadcasts">No Incoming Broadcasts.</string>
    <string name="chat">Chat</string>
    <string name="roster">Roster</string>
    <string name="interested">Interested:</string>
    <string name="confirmed">Confirmed</string>
    <string name="send">Send</string>
    <string name="description">Description: </string>
    <string name="no_description">No description</string>
    <string name="location">Location: </string>
    <string name="no_location">No location</string>
    <string name="time">Time: </string>
    <string name="no_time">No time</string>
    <string name="im_interested">I\'m interested.</string>
    <string name="im_down">I\'m down.</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="add_outgoing_broadcasts">Add Outgoing Broadcasts</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="settings">Settings</string>

</resources>