<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_proposal_activity2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewWhatDoYouWantToDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/what_do_you_want_to_do" />

    <ImageView
        android:id="@+id/imageViewDescriptionInvalid"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignTop="@+id/textViewWhatDoYouWantToDo"
        android:layout_toRightOf="@+id/textViewWhatDoYouWantToDo"
        android:src="@drawable/exclamation_mark_red"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editTextProposalDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewWhatDoYouWantToDo"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/proposal_description"
        android:inputType="textShortMessage"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textViewWhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextProposalLocation"
        android:layout_below="@+id/editTextProposalDescription"
        android:layout_marginTop="20dp"
        android:text="@string/where" />

    <ImageView
        android:id="@+id/imageViewLocationInvalid"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignTop="@+id/textViewWhere"
        android:layout_toRightOf="@+id/textViewWhere"
        android:src="@drawable/exclamation_mark_red"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editTextProposalLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewWhere"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/proposal_location"
        android:inputType="textShortMessage"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textViewTodayAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewWhen"
        android:layout_alignBottom="@+id/textViewWhen"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textViewWhen"
        android:text="@string/today_at"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textViewWhen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextProposalLocation"
        android:layout_below="@+id/editTextProposalLocation"
        android:layout_marginTop="20dp"
        android:text="@string/when" />

    <TimePicker
        android:id="@+id/timePickerAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWhen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/buttonCreateProposal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="2dp"
        android:background="@drawable/button_black"
        android:enabled="false"
        android:onClick="broadcastProposal"
        android:text="@string/broadcast_new_proposal"
        android:textColor="@android:color/white" />

</RelativeLayout>