<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ListView
        android:id="@+id/interested_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButtonInterested"
        android:layout_gravity="center"
        android:layout_toLeftOf="@+id/helper"
        android:cacheColorHint="#00000000"
        android:paddingLeft="10dp" />

    <View
        android:id="@+id/helper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:id="@+id/confirmed_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButtonConfirmed"
        android:layout_toRightOf="@+id/helper"
        android:cacheColorHint="#00000000"
        android:paddingLeft="5dp" />

    <TextView
        android:id="@+id/textViewDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/description"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textViewDescriptionLabel"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/no_description"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewDescriptionLabel"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/location"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewLocationLabel"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/time"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDescription"
        android:layout_toRightOf="@+id/textViewLocationLabel"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/no_location" />

    <!--
    <TextView
        android:id="@+id/textViewInterested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTimeLabel"
        android:layout_marginTop="48dp"
        android:paddingLeft="5dp"
        android:text="@string/interested"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewConfirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewInterested"
        android:layout_alignBottom="@+id/textViewInterested"
        android:layout_toRightOf="@+id/helper"
        android:text="@string/confirmed"
        android:textSize="15sp"
        android:textStyle="bold" />
    -->

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewLocation"
        android:layout_toRightOf="@+id/textViewTimeLabel"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/no_time" />

    <ToggleButton
        android:id="@+id/toggleButtonInterested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTime"
        android:layout_toLeftOf="@+id/helper"
        android:textOff="@string/interested"
        android:textOn="@string/interested" />

    <ToggleButton
        android:id="@+id/toggleButtonConfirmed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toggleButtonInterested"
        android:layout_toRightOf="@+id/toggleButtonInterested"
        android:textOff="@string/confirmed"
        android:textOn="@string/confirmed" />

</RelativeLayout>