<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroupFreeBusy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <RadioButton
            android:id="@+id/radioButtonFree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingRight="10dp"
            android:text="@string/free" />

        <RadioButton
            android:id="@+id/radioButtonBusy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busy" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewSetStatusPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonSetStatus"
        android:layout_below="@+id/radioGroupFreeBusy"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/how_long_will_you_be_free" />

    <TimePicker
        android:id="@+id/timePickerStatusDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewSetStatusPrompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" />

    <Button
        android:id="@+id/buttonSetStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="2dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button_green"
        android:onClick="setStatus"
        android:text="@string/set_status"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</RelativeLayout>